--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://producthire.net/job/product-manager-36/'>Product Manager | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698490603-senior-product-manager-coverage-tribe-m-f-d-'>Omio Senior Product Manager Coverage Tribe (m / f / d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o8tpbfwV'>Department for International Trade  - Digital, Data and Technology Careers - Product Manager / Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -224,7 +232,7 @@
 <p><span class="badge badge-light">UK - London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TheRIIMLLC/743999698526774-payment-product-manager'>TheRIIM LLC Payment Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheRIIMLLC/743999698526774-payment-product-manager'>TheRIIM LLC Payment Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue Bellevue, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -244,11 +252,11 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523382-iot-and-controls-product-manager'>Bosch Group IoT and Controls Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523382-iot-and-controls-product-manager'>Bosch Group IoT and Controls Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://perkspot12.applytojob.com/apply/2BK9BoBS7a/Senior-Product-Manager'>Senior Product Manager - PerkSpot - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://perkspot12.applytojob.com/apply/2BK9BoBS7a/Senior-Product-Manager'>Senior Product Manager - PerkSpot - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -316,7 +324,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698505140-principal-product-manager-data-platform-and-analytics'>Optimizely Principal Product Manager, Data Platform and Analytics | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698505140-principal-product-manager-data-platform-and-analytics'>Optimizely Principal Product Manager, Data Platform and Analytics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -332,7 +340,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://portlandwebworks.applytojob.com/apply/dqETz50XsJ/Product-Owner-ONSITE-Sacramento-CA'>Product Owner - ONSITE - Sacramento, CA - Portland Webworks - Career Page</a></h5> 
+<h5><a href='http://portlandwebworks.applytojob.com/apply/dqETz50XsJ/Product-Owner-ONSITE-Sacramento-CA'>Product Owner - ONSITE - Sacramento, CA - Portland Webworks - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -366,7 +374,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/icapitalnetwork/jobs/4489628002'>Job Application for Product Manager at iCapital Network</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/icapitalnetwork/jobs/4489628002'>Job Application for Product Manager at iCapital Network</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -398,7 +406,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4472972002'>Job Application for Senior Product Manager at Anaplan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4472972002'>Job Application for Senior Product Manager at Anaplan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -450,15 +458,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SFL/743999698447594-product-owner'>SFL Product Owner | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Yerevan</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1831883?gh_src=eb585a351'>Job Application for Senior Product Manager at Deliveroo</a></h5> 
-<p><span class="badge badge-light">London  London</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
