--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://potentialpark.applytojob.com/apply/oXf6Lm3j7H/FullStack-Web-Developer'>Full-Stack Web Developer - Potentialpark - Career Page</a></h5> 
+<p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698561598-concepteur-developpeur-fullstack'>onepoint Concepteur D?veloppeur Fullstack | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">France</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://dedeleads.com/job/petroplan-looking-for-full-stack-php-web-developer/'>PETROPLAN looking for Full-Stack, PHP Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -78,7 +86,7 @@
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nv8ipMwB'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nv8ipMwB'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -102,7 +110,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -144,7 +152,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -192,7 +200,7 @@
 <p><span class="badge badge-light">Menlo Park, CAUnited States  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://touchbistro.applytojob.com/apply/HS4PTooaxY/Full-Stack-Development-Support-Intern'>Full Stack Development Support Intern - TouchBistro - Career Page</a></h5> 
+<h5><a href='http://touchbistro.applytojob.com/apply/HS4PTooaxY/Full-Stack-Development-Support-Intern'>Full Stack Development Support Intern - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -224,11 +232,11 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/octane/c26d9979-6427-4637-a3fb-a422596690d2'>Octane AI - Full-Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/octane/c26d9979-6427-4637-a3fb-a422596690d2'>Octane AI - Full-Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crateio.recruitee.com/o/fullstack-engineer'>
       Fullstack Engineer - Crate.io Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -268,7 +276,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.php-resource.de/jobs/job,45562,Full-Stack-Web-Entwickler---PHP--SQL--HTML-mwd.htm'>Full-Stack Web Entwickler - PHP / SQL / HTML (m/w/d) Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
+<h5><a href='https://www.php-resource.de/jobs/job,45562,Full-Stack-Web-Entwickler---PHP--SQL--HTML-mwd.htm'>Full-Stack Web Entwickler - PHP / SQL / HTML (m/w/d) Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -308,7 +316,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=opqbbfwV&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nK8coMwJ'>NICE Careers - Software Engineer - .NET Full Stack</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=opqbbfwV&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nK8coMwJ'>NICE Careers - Software Engineer - .NET Full Stack</a></h5> 
 <p><span class="badge badge-light">Austin, Texas  Austin, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -422,7 +430,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://claritypartnersllc.applytojob.com/apply/RSwdZ1otBa/FullStack-Java-Developer'>Full-Stack Java Developer - Clarity Partners, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://claritypartnersllc.applytojob.com/apply/RSwdZ1otBa/FullStack-Java-Developer'>Full-Stack Java Developer - Clarity Partners, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -443,14 +451,6 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <hr/>
 <h5><a href='http://myelincommunicationsdbamerge.applytojob.com/apply/5WN0iDrKnc/Full-Stack-Developer-Associate-Winter-Internship'>Full Stack Developer Associate (Winter Internship) - Merge - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
-<p><span class="badge badge-light">Columbia, Maryland</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
